<resources>
    <string name="app_name">moviesUp</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="release_date">Release Date:</string>
    <string name="imdb_rating">IMDB Rating:</string>
    <string name="the_synopsis">Synopsis</string>
    <string name="website">Website</string>
    <string name="imdb">IMDB</string>
    <string name="trailer">Trailer</string>
    <string name="trailers_amp_clips"><![CDATA[Trailers & Clips]]></string>
    <string name="cast">Cast</string>
    <string name="no_internet_connection">Please, Check Your Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="dateFormat">MMMM dd, yyyy</string>
    <string name="release">Release Date : </string>
    <string name="search">Search Movie</string>
    <string name="genres">Genres</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posters">Posters</string>
    <string name="backdrops">Backdrops</string>
    <string name="popular_people">Popular People</string>
    <string name="also_known_as">Also known as</string>
    <string name="biography">Biography</string>
    <string name="movie_credits">Movie Credits</string>
    <string name="images">Images</string>
    <string name="trending_today">Trending Today</string>
    <string name="no_internet">No Internet !!!</string>
    <string name="episodes">Episodes</string>
    <string name="media">Media</string>
    <string name="production_company">Production Company</string>
    <string name="last_episode_aired_on">Last episode aired on</string>
    <string name="first_episode_aired_on">First episode aired on</string>
    <string name="episode_runtime">Episode runtime</string>
    <string name="total_episodes">Total episodes</string>
    <string name="total_seasons">Total Seasons</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="no_more_items">No More Items</string>
    <string name="view_the_collection">View the collection</string>
    <string name="production_country">Production Country</string>
    <string name="spoken_language">Spoken Language</string>
    <string name="original_language">Original Language</string>
    <string name="revenue">Revenue</string>
    <string name="budget">Budget</string>
    <string name="runtime">Runtime</string>
    <string name="original_title">Original Title</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="tv_genre">Tv Genre</string>
    <string name="featured_movie_lists">Featured Movie Lists</string>
    <string name="featured_tv_lists">Featured TV Lists</string>
</resources>
