<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".PeopleDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|enterAlways"
            app:statusBarScrim="?attr/colorPrimaryDark"
            app:titleEnabled="false">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin">

                <androidx.cardview.widget.CardView
                    android:id="@+id/peopleCard"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:transitionName="imageTransition"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/people_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/people_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@id/peopleCard"
                    android:fitsSystemWindows="true"
                    android:textAppearance="@style/MovieTitleTheme"
                    android:transitionName="peopleNameTransition"
                    app:layout_collapseMode="pin" />

                <TextView
                    android:id="@+id/people_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/people_name"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/peopleCard"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TitleTextTheme" />

                <TextView
                    android:id="@+id/people_birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/people_department"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/peopleCard"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TitleTextTheme" />

                <TextView
                    android:id="@+id/people_birthplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/people_birthdate"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/peopleCard"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TitleTextTheme" />

            </RelativeLayout>

            <include
                android:id="@+id/people_toolbar"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_collapseMode="pin" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/peopleDetailScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/peopleDetailBar"
                style="@style/HeaderTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/knonwAs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/also_known_as"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TitleTheme" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/also_known_as_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/biograpghy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/biography"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TitleTheme" />

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/people_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:animDuration="200"
                app:maxCollapsedLines="5">

                <TextView
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TitleTextTheme" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:background="@android:color/transparent"
                    android:padding="16dp" />

            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <TextView
                android:id="@+id/movie_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/movie_credits"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TitleTheme" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movie_credits_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>