<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.cast.CastAboutFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/peopleDetailScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/peopleDetailBar"
                style="@style/HeaderTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/knonAs_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/knonwAs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/also_known_as"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TitleTheme" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/also_known_as_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bio_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/biograpghy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/biography"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TitleTheme" />

                <com.ms.square.android.expandabletextview.ExpandableTextView
                    android:id="@+id/people_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:animDuration="200"
                    app:maxCollapsedLines="5">

                    <TextView
                        android:id="@+id/expandable_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TitleTextTheme" />

                    <ImageButton
                        android:id="@id/expand_collapse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|bottom"
                        android:background="@android:color/transparent"
                        android:padding="16dp" />

                </com.ms.square.android.expandabletextview.ExpandableTextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cast_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/o_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:text="Birth date"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TitleTheme" />

                    <TextView
                        android:id="@+id/o_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/o_title"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:text="From"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TitleTheme" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/people_birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TitleTextTheme" />

                    <TextView
                        android:id="@+id/people_birthplace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TitleTextTheme" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/images_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/images"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TitleTheme" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/images_card"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/people_media"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:scaleType="center" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:alpha="0.6"
                        android:background="@android:color/black"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/people_count"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:textAppearance="@style/HeaderTheme" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>